feat(proactive): Phase 7-2 — HTML 리포트 + 요약 생성
report-writer 서브에이전트가 3개 파일(HTML/마크다운/요약)을 생성하도록 변경.
웹 리포트 뷰어(iframe srcdoc), Puppeteer PDF 변환, 알림 요약 + 리포트 보기 링크.

AI Agent:
- report-writer: HTML + report.md + summary.md 3중 출력
- proactive 라우트: 디렉토리 기반 파일 읽기, htmlContent/summary 반환
- Puppeteer HTML→PDF 엔드포인트 (/agent/html-to-pdf)

Backend:
- ProactiveResult: htmlContent, summary 필드 추가
- PdfExportService: htmlContent → Puppeteer PDF, 폴백 Flying Saucer
- ChatDeliveryChannel: summary만 저장, jobId/executionId 포함
- EmailDeliveryChannel: 요약 + "웹에서 보기" 링크, md→html 렌더링
- ProactiveJobController: HTML 리포트 API 엔드포인트 추가
- app.base-url 설정 추가 (local/prod)

Frontend:
- ReportViewerPage: iframe srcdoc 독립 라우트
- JobExecutionsTab: 요약 + 리포트 보기 버튼, 테이블 정렬 개선
- AINotificationPanel: 리포트 보기 링크 + 패널 닫기
- ProactiveMessage: 리포트 보기 버튼
- proactive-utils: summary 필드 지원
- 실행 후 실행 이력 즉시 갱신

기타:
- 코드 주석 필수 컨벤션 추가 (CLAUDE.md 4개)
- ROADMAP 7-2 완료, Jsoup 의존성 추가

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>